--- a/app/views/book/show_subjects.html
+++ b/app/views/book/show_subjects.html
@@ -1,6 +1,6 @@
-<h1><%= @subject.try(:name) -%></h1>
+<h1><%= @subject.name -%></h1>
 <ul>
-    <% @subject.sbooks.each do |c| %>
+    <% @subject.books.each do |c| %>
     <li><%= link_to c.title, :action => "show", :id => c.id -%></li>
     <% end %>
 </ul>
