--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,3 +56,19 @@ ul#subjects li {
     display: inline;
     padding-left: 5px;
 }
+ul#uploads {
+    width: 700px;
+    text-align: center;
+    padding: 5px;
+    background-color: #C1BBBB;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+}
+ul#uploads li {
+    width: 700px;
+    text-align: center;
+    padding: 5px;
+    background-color: #C1BBBB;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+}
